Additional end points to delete transactions

--- a/API-gateway/src/main/resources/application.properties
+++ b/API-gateway/src/main/resources/application.properties
@@ -4,5 +4,8 @@ server.port=8765
 spring.cloud.gateway.discovery.locator.enabled=true
 #
 ## Global CORS configuration for Spring Cloud Gateway
-#spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
-#spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=GET,POST
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=GET,POST,PUT,DELETE, OPTIONS
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedHeaders=*
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowCredentials=true
+
