--- a/API-gateway/src/main/resources/application.properties
+++ b/API-gateway/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=API-gateway
 server.port=8765
-
+eureka.client.service-url.defaultZone=http://localhost:8761/Eureka-Service
 spring.cloud.gateway.discovery.locator.enabled=true
 #
+
+spring.main.web-application-type=reactive
+
 ## Global CORS configuration for Spring Cloud Gateway
 spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
 spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=GET,POST,PUT,DELETE, OPTIONS
